2007-05-23  Chris Toshok  <toshok@ximian.com>

	[ pretty huge commit ]
	
	* compzilla/public/compzillaIWindowEvents.idl: remove the property
	bag.

	* compzilla/src/compzillaWindowEvents.cpp/.h: remove the property
	bag.

	* compzilla/src/compzillaWindow.cpp (GetStringProperty): since
	this isn't part of the idl anymore, clean it up by taking an Atom
	parameter, and removing a cast.
	(GetProperty): massaged this method from the guts of
	PropertyChanged.  there's certainly more refcounting problems
	here...  we also create instances only to let them die if the
	property isn't found.  This method returns NULL for bag2 if the
	property isn't set.  Also, provide an implementation for
	_NET_WM_ICON_GEOMETRY.
	(PropertyChanged): remove the window parameter.  we should just be
	using mWindow anyway.  no longer do anything with the property bag
	here.  if the JS wants it they can turn around and query the
	native code for it.

	* compzilla/src/compzillaControl.cpp (SetRootWindowArrayProperty):
	new method, just a thin wrapper around XChangeProperty on the root
	window.
	(PropertyChanged): there's no need to pass the window ID to
	compwin->PropertyChanged.

	* compzilla/public/compzillaIWindow.idl: remove GetAtomProperty
	and GetStringProperty, replacing them with GetProperty, which
	returns an nsIPropertyBag2.

	* compzilla/public/compzillaIControl.idl: add
	SetRootWindowArrayProperty.

	* compzilla/chrome/skin/compzilla.css: set uiDlg's overflow to
	hidden, so that we never see the window content outside the
	frames, even if we happen to be resizing and that causes the frame
	to resize before the content element.  Also, comment out the
	uiDlgButton's float style, as it seems to work fine for me without
	it, and it removes gobs and gobs and gobs of mozilla assertions.
	That float is incorrect given the surrounding context.

	* compzilla/chrome/content/start.js: hack to get the task switcher
	to work.  update the _NET_CLIENT_LIST and